working on split pane